2024-06-04T01:18:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9359645174 # 316
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-04
* notice: last 14d: unq all: 4 17
* notice: prev accum: outdated-unq outdated-all / unq all: 379 766 / 396 786
* notice: next accum: outdated-unq outdated-all / unq all: 381 768 / 396 786
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2024-05-20] / [2024-05-21]

2024-06-03T01:19:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9342781880 # 315
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-03
* notice: last 14d: unq all: 4 19
* notice: prev accum: outdated-unq outdated-all / unq all: 378 764 / 395 785
* notice: next accum: outdated-unq outdated-all / unq all: 379 766 / 396 786
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-19] / [2024-05-20 2024-06-02]

2024-06-02T01:22:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9334609935 # 314
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-02
* notice: last 14d: unq all: 4 20
* notice: prev accum: outdated-unq outdated-all / unq all: 377 762 / 394 784
* notice: next accum: outdated-unq outdated-all / unq all: 378 764 / 395 785
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-18] / [2024-05-19 2024-06-01]

2024-06-01T01:22:39Z: