@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-06-04T01:18:59Z",
-  "count_outdated" : 768,
-  "uniques_outdated" : 381,
-  "count" : 786,
-  "uniques" : 396,
+  "timestamp" : "2024-06-05T01:18:34Z",
+  "count_outdated" : 770,
+  "uniques_outdated" : 382,
+  "count" : 787,
+  "uniques" : 397,
   "clones" : [
     {
-      "timestamp": "2024-05-21T00:00:00Z",
+      "timestamp": "2024-05-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2024-05-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2024-06-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
