@@ -1,15 +1,10 @@
 {
-  "count": 17,
+  "count": 16,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2024-05-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-05-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2024-06-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-06-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
