@@ -1,3 +1,12 @@
+2024-06-05T01:18:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9376614951 # 317
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-05
+* notice: last 14d: unq all: 4 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 381 768 / 396 786
+* notice: next accum: outdated-unq outdated-all / unq all: 382 770 / 397 787
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-05-21] / [2024-05-22 2024-06-04]
+
 2024-06-04T01:18:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9359645174 # 316
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-04
